fix alignment issue on popular page

--- a/app/common/stylesheets/application.css
+++ b/app/common/stylesheets/application.css
@@ -45,6 +45,11 @@ li.tag-item-display {
 
 }
 
+div.textbox {
+  width:90%;
+  margin-right: -20px;
+}
+
 .padding {
   background-color: white;
 }
@@ -68,7 +73,7 @@ span.score {
 
 span.hackscore {
   font-size: 125%;
-  padding-right: 2.5px;
+  padding-right: 3px;
 }
 
 tr.ng-enter,
